fixed pdf size/gaps

--- a/frontend/src/app/main/pdf-generator/pdf-generator.component.scss
+++ b/frontend/src/app/main/pdf-generator/pdf-generator.component.scss
@@ -14,7 +14,7 @@
 }
 
 .file-container {
-    padding: 40px 30px;
+    padding: 20px 30px 0;
 }
 
 .row-container {
